--- a/docker/lerobot-cpu-ubuntu/Dockerfile
+++ b/docker/lerobot-cpu-ubuntu/Dockerfile
@@ -14,6 +14,13 @@ ENV PATH="/opt/venv/bin:$PATH"
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential cmake git \
     libglib2.0-0 libgl1-mesa-glx libegl1-mesa ffmpeg \
+    libprotobuf-dev \
+    protobuf-compiler \
+    curl \
+    wget \
+    sudo \
+    lsb-release \
+    software-properties-commo \
     speech-dispatcher libgeos-dev \
     python${PYTHON_VERSION}-dev python${PYTHON_VERSION}-venv \
     && ln -s /usr/bin/python${PYTHON_VERSION} /usr/bin/python \
@@ -21,6 +28,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean && rm -rf /var/lib/apt/lists/* \
     && echo "source /opt/venv/bin/activate" >> /root/.bashrc
 
+RUN add-apt-repository ppa:ubuntu-toolchain-r/test -y && \
+apt-get update && apt-get install -y gcc-13 g++-13 && \
+update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 60 --slave /usr/bin/g++ g++ /usr/bin/g++-13 && \
+apt-get clean && rm -rf /var/lib/apt/lists/* \
 # Clone repository and install LeRobot in a single layer
 COPY . /lerobot
 WORKDIR /lerobot
